hphp/hack/test/typecheck/higher_kinded_types/hk_disabled/hk_argument.php
<?hh

type Foo<TX<TY>> = TX<bool>;
